Make things inside foreignObject reflow in response to style changes that cause reflow.  b=328829  r=jwatt  sr=roc